load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@pypi//:requirements.bzl", "requirement")
load("//python:version.bzl", "VELARIA_PY_VERSION")

py_binary(
    name = "sync_native_extension",
    srcs = ["sync_native_extension.py"],
    main = "sync_native_extension.py",
    args = ["$(location //:velaria_pyext)"],
    data = ["//:velaria_pyext"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "velaria_native_py_pkg",
    srcs = ["//:velaria_pyext"],
    outs = ["velaria/_velaria.so"],
    cmd = "cp $< $@",
)

py_library(
    name = "velaria_py_pkg",
    srcs = [
        "velaria/__init__.py",
        "velaria/cli/__init__.py",
        "velaria/cli/_common.py",
        "velaria/cli/agentic.py",
        "velaria/cli/ai_cmd.py",
        "velaria/cli/artifacts.py",
        "velaria/cli/embedding.py",
        "velaria/cli/file_sql.py",
        "velaria/cli/interactive.py",
        "velaria/cli/run_cmd.py",
        "velaria/cli/vector_search.py",
        "velaria/_version.py",
        "velaria/excel.py",
        "velaria/custom_stream.py",
        "velaria/bitable.py",
        "velaria/agentic_store.py",
        "velaria/agentic_templates.py",
        "velaria/agentic_dsl.py",
        "velaria/agentic_search.py",
        "velaria/agentic_runtime.py",
        "velaria/embedding.py",
        "velaria/keyword_index.py",
        "velaria/ai_runtime/__init__.py",
        "velaria/ai_runtime/_tools.py",
        "velaria/ai_runtime/agent.py",
        "velaria/ai_runtime/claude_runtime.py",
        "velaria/ai_runtime/codex_runtime.py",
        "velaria/ai_runtime/functions.py",
        "velaria/ai_runtime/mcp_server.py",
        "velaria/ai_runtime/session_registry.py",
        "velaria/workspace/__init__.py",
        "velaria/workspace/artifact_index.py",
        "velaria/workspace/paths.py",
        "velaria/workspace/run_store.py",
        "velaria/workspace/types.py",
    ],
    data = [":velaria_native_py_pkg"],
    imports = ["."],
    deps = [
        requirement("jieba"),
        requirement("mcp"),
        requirement("openpyxl"),
        requirement("pandas"),
        requirement("prompt_toolkit"),
        requirement("pyarrow"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "demo_stream_sql",
    srcs = ["examples/demo_stream_sql.py"],
    main = "examples/demo_stream_sql.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "demo_batch_sql_arrow",
    srcs = ["examples/demo_batch_sql_arrow.py"],
    main = "examples/demo_batch_sql_arrow.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "demo_bitable_group_by_owner",
    srcs = ["examples/demo_bitable_group_by_owner.py"],
    main = "examples/demo_bitable_group_by_owner.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "demo_vector_search",
    srcs = ["examples/demo_vector_search.py"],
    main = "examples/demo_vector_search.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "demo_embedding_pipeline",
    srcs = ["examples/demo_embedding_pipeline.py"],
    main = "examples/demo_embedding_pipeline.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "bench_arrow_ingestion",
    srcs = ["benchmarks/bench_arrow_ingestion.py"],
    main = "benchmarks/bench_arrow_ingestion.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "bench_stage_paths",
    srcs = ["benchmarks/bench_stage_paths.py"],
    main = "benchmarks/bench_stage_paths.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "bench_embedding_pipeline",
    srcs = ["benchmarks/bench_embedding_pipeline.py"],
    main = "benchmarks/bench_embedding_pipeline.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "bench_embedding_recall",
    srcs = ["benchmarks/bench_embedding_recall.py"],
    main = "benchmarks/bench_embedding_recall.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "bench_realtime_stream",
    srcs = ["benchmarks/bench_realtime_stream.py"],
    main = "benchmarks/bench_realtime_stream.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "bench_realtime_wrapper_stress",
    srcs = ["benchmarks/bench_realtime_wrapper_stress.py"],
    main = "benchmarks/bench_realtime_wrapper_stress.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "velaria_cli",
    srcs = ["velaria_cli.py"],
    main = "velaria_cli.py",
    deps = [
        ":velaria_cli_lib",
    ],
)

py_library(
    name = "velaria_cli_lib",
    srcs = ["velaria_cli.py"],
    imports = ["."],
    deps = [":velaria_py_pkg"],
)

py_package(
    name = "velaria_pkg",
    packages = ["velaria"],
    deps = [":velaria_py_pkg"],
)

filegroup(
    name = "velaria_python_sources",
    srcs = glob(["velaria/**/*.py"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_python_supported_sources",
    srcs = [
        ":velaria_python_sources",
        "velaria_cli.py",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_python_example_sources",
    srcs = glob([
        "examples/**/*.py",
        "benchmarks/**/*.py",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_python_experimental_sources",
    srcs = ["experimental/README.md"],
    visibility = ["//visibility:public"],
)

py_wheel(
    name = "velaria_whl",
    distribution = "velaria",
    python_tag = "py3",
    version = VELARIA_PY_VERSION,
    deps = [":velaria_pkg"],
    entry_points = {
        "console_scripts": [
            "velaria-cli = velaria.cli:main",
            "velaria_cli = velaria.cli:main",
        ],
    },
    requires = [
        "pyarrow",
        "pandas",
        "openpyxl",
        "mcp",
        "prompt-toolkit",
    ],
)

genrule(
    name = "velaria_native_whl",
    srcs = [
        ":velaria_whl",
        ":velaria_python_sources",
        "//:velaria_pyext",
        "//scripts:build_native_wheel.py",
        "@velaria_local_python//:python_tag.txt",
        "@velaria_local_python//:abi_tag.txt",
        "@velaria_local_python//:platform_tag.txt",
    ],
    outs = ["velaria-%s-native.whl" % VELARIA_PY_VERSION],
    cmd = "python3 $(location //scripts:build_native_wheel.py) "
        + "$(location :velaria_whl) "
        + "$(location //:velaria_pyext) "
        + "$(location @velaria_local_python//:python_tag.txt) "
        + "$(location @velaria_local_python//:abi_tag.txt) "
        + "$(location @velaria_local_python//:platform_tag.txt) "
        + "velaria $@"
        + " $(locations :velaria_python_sources)",
    tools = ["//scripts:build_native_wheel.py"],
)

py_test(
    name = "read_excel_test",
    srcs = ["tests/test_read_excel.py"],
    main = "tests/test_read_excel.py",
    data = ["tests/fixtures/employee_import_mock.xlsx"],
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("mcp"),
        requirement("pyarrow"),
    ],
)

py_test(
    name = "streaming_v05_test",
    srcs = ["tests/test_streaming_v05.py"],
    main = "tests/test_streaming_v05.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "custom_stream_source_test",
    srcs = ["tests/test_custom_stream_source.py"],
    main = "tests/test_custom_stream_source.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "arrow_stream_ingestion_test",
    srcs = ["tests/test_arrow_stream_ingestion.py"],
    main = "tests/test_arrow_stream_ingestion.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "source_materialization_test",
    srcs = ["tests/test_source_materialization.py"],
    main = "tests/test_source_materialization.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
    ],
)

py_test(
    name = "file_source_api_test",
    srcs = ["tests/test_file_sources.py"],
    main = "tests/test_file_sources.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
    ],
)

py_test(
    name = "bitable_stream_source_test",
    srcs = ["tests/test_bitable_stream_source.py"],
    main = "tests/test_bitable_stream_source.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
    ],
)

py_test(
    name = "bitable_group_by_owner_integration_test",
    srcs = ["tests/test_bitable_group_by_owner_integration.py"],
    main = "tests/test_bitable_group_by_owner_integration.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
    ],
)

py_test(
    name = "vector_search_test",
    srcs = ["tests/test_vector_search.py"],
    main = "tests/test_vector_search.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "embedding_pipeline_test",
    srcs = ["tests/test_embedding_pipeline.py"],
    main = "tests/test_embedding_pipeline.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "python_cli_contract_test",
    srcs = ["tests/test_python_cli_contract.py"],
    main = "tests/test_python_cli_contract.py",
    imports = ["."],
    deps = [
        ":velaria_cli_lib",
        ":velaria_py_pkg",
    ],
)

py_test(
    name = "ai_runtime_agent_test",
    srcs = ["tests/test_ai_runtime_agent.py"],
    main = "tests/test_ai_runtime_agent.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "workspace_runs_test",
    srcs = ["tests/test_workspace_runs.py"],
    main = "tests/test_workspace_runs.py",
    imports = ["."],
    deps = [
        ":velaria_cli_lib",
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "artifact_index_test",
    srcs = ["tests/test_artifact_index.py"],
    main = "tests/test_artifact_index.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
    ],
)

test_suite(
    name = "velaria_python_supported_regression",
    tests = [
        ":arrow_stream_ingestion_test",
        ":artifact_index_test",
        ":ai_runtime_agent_test",
        ":bitable_group_by_owner_integration_test",
        ":bitable_stream_source_test",
        ":custom_stream_source_test",
        ":embedding_pipeline_test",
        ":file_source_api_test",
        ":python_cli_contract_test",
        ":read_excel_test",
        ":streaming_v05_test",
        ":vector_search_test",
        ":workspace_runs_test",
    ],
)
