[project]
name = "velaria"
dynamic = ["version"]
description = "Python API for the Velaria dataflow engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyarrow>=23,<24",
  "pandas>=2.1,<3",
  "openpyxl>=3.1,<4",
  "jieba>=0.42,<1",
  "mcp>=1.27,<2",
  "codex-app-server-sdk>=0.1.0",
  "prompt-toolkit>=3,<4",
  "rich>=13,<15",
  "xlrd>=2,<3",
]

[project.scripts]
velaria-cli = "velaria.cli:main"
velaria_cli = "velaria.cli:main"

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=5.3.0",
    "socksio>=1.0.0",
]
ai-claude = ["claude-agent-sdk>=0.1.60"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["velaria", "velaria.*"]

[tool.setuptools.package-data]
velaria = ["_velaria.so"]

[tool.setuptools.dynamic]
version = {attr = "velaria._version.__version__"}

[tool.uv]
package = true
