load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@pypi//:requirements.bzl", "requirement")
load("//python_api:version.bzl", "VELARIA_PY_VERSION")

genrule(
    name = "velaria_native_py_pkg",
    srcs = ["//:velaria_pyext"],
    outs = ["velaria/_velaria.so"],
    cmd = "cp $< $@",
)

py_library(
    name = "velaria_py_pkg",
    srcs = [
        "velaria/__init__.py",
        "velaria/_version.py",
        "velaria/excel.py",
        "velaria/custom_stream.py",
        "velaria/bitable.py",
    ],
    data = [":velaria_native_py_pkg"],
    imports = ["."],
    deps = [
        requirement("openpyxl"),
        requirement("pandas"),
        requirement("pyarrow"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "demo_stream_sql",
    srcs = ["demo_stream_sql.py"],
    main = "demo_stream_sql.py",
    deps = [":velaria_py_pkg"],
)

py_binary(
    name = "demo_batch_sql_arrow",
    srcs = ["demo_batch_sql_arrow.py"],
    main = "demo_batch_sql_arrow.py",
    deps = [":velaria_py_pkg"],
)

py_package(
    name = "velaria_pkg",
    packages = ["velaria"],
    deps = [":velaria_py_pkg"],
)

py_wheel(
    name = "velaria_whl",
    distribution = "velaria",
    python_tag = "py3",
    version = VELARIA_PY_VERSION,
    deps = [":velaria_pkg"],
    requires = [
        "pyarrow",
        "pandas",
        "openpyxl",
    ],
)

genrule(
    name = "velaria_native_whl",
    srcs = [
        ":velaria_whl",
        "//:velaria_pyext",
        "//scripts:build_native_wheel.py",
        "@velaria_local_python//:python_tag.txt",
        "@velaria_local_python//:abi_tag.txt",
        "@velaria_local_python//:platform_tag.txt",
    ],
    outs = ["velaria-%s-native.whl" % VELARIA_PY_VERSION],
    cmd = "python3 $(location //scripts:build_native_wheel.py) "
        + "$(location :velaria_whl) "
        + "$(location //:velaria_pyext) "
        + "$(location @velaria_local_python//:python_tag.txt) "
        + "$(location @velaria_local_python//:abi_tag.txt) "
        + "$(location @velaria_local_python//:platform_tag.txt) "
        + "velaria $@",
    tools = ["//scripts:build_native_wheel.py"],
)

py_test(
    name = "read_excel_test",
    srcs = ["tests/test_read_excel.py"],
    main = "tests/test_read_excel.py",
    data = ["tests/fixtures/employee_import_mock.xlsx"],
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "streaming_v05_test",
    srcs = ["tests/test_streaming_v05.py"],
    main = "tests/test_streaming_v05.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "custom_stream_source_test",
    srcs = ["tests/test_custom_stream_source.py"],
    main = "tests/test_custom_stream_source.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "arrow_stream_ingestion_test",
    srcs = ["tests/test_arrow_stream_ingestion.py"],
    main = "tests/test_arrow_stream_ingestion.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
        requirement("pyarrow"),
    ],
)

py_test(
    name = "bitable_stream_source_test",
    srcs = ["tests/test_bitable_stream_source.py"],
    main = "tests/test_bitable_stream_source.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
    ],
)

py_test(
    name = "bitable_group_by_owner_integration_test",
    srcs = ["tests/test_bitable_group_by_owner_integration.py"],
    main = "tests/test_bitable_group_by_owner_integration.py",
    imports = ["."],
    deps = [
        ":velaria_py_pkg",
    ],
)
