[project]
name = "velaria"
version = "0.1.0"
description = "Python API for the Velaria dataflow engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyarrow>=23,<24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
