[project]
name = "velaria"
dynamic = ["version"]
description = "Python API for the Velaria dataflow engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyarrow>=23,<24",
  "pandas>=2.1,<3",
  "openpyxl>=3.1,<4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["velaria", "velaria.*"]

[tool.setuptools.package-data]
velaria = ["_velaria.so"]

[tool.setuptools.dynamic]
version = {attr = "velaria._version.__version__"}

[tool.uv]
package = true
