exports_files([
    "build_py_cli_executable.sh",
    "build_native_wheel.py",
    "generate_stage_benchmark_fixture.py",
    "prepare_velaria_release.sh",
    "run_core_regression.sh",
    "run_actor_rpc_e2e.sh",
    "run_experimental_regression.sh",
    "run_python_ci_checks.sh",
    "run_python_ecosystem_regression.sh",
    "run_python_stage_benchmark.sh",
    "run_actor_rpc_scheduler.sh",
    "run_stream_observability_regression.sh",
    "run_vector_search_benchmark.sh",
])
